--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "daisyui": "^2.14.3",
+    "date-fns": "^2.28.0",
     "react": "^18.1.0",
+    "react-day-picker": "^8.0.4",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
