--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.1.0",
     "react-day-picker": "^8.0.4",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.1",
     "react-modal": "^3.15.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
