--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.1.0",
     "react-day-picker": "^8.0.4",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.1",
     "react-modal": "^3.15.1",
     "react-router-dom": "6",
